--- a/authentication/package.json
+++ b/authentication/package.json
@@ -14,11 +14,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "handlebars": "^4.7.7",
     "http-proxy-middleware": "^2.0.6",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mssql": "^9.1.1",
     "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22"
   }
 }
